# creating_ps_files

./: README.txt
creating_templates/make_template/: CMakeLists.txt  make_template.cpp
creating_templates/make_template/templates/: template.ps
creating_templates/make_template/xml/: layout_solid.xml  solid_english.xml  solid_polish.xml  solid_russian.xml  solid_turkish.xml
libs/inc/: circles_ps.hpp  drawing_ps.hpp  images_ps.hpp  lines_ps.hpp  print_maker.hpp  rects_ps.hpp  tables_ps.hpp  texts_ps.hpp  xml_converter.hpp
libs/src/: circles_ps.cpp  drawing_ps.cpp  images_ps.cpp  lines_ps.cpp  print_maker.cpp  rects_ps.cpp  tables_ps.cpp  texts_ps.cpp  xml_converter.cpp
printing_report/: CMakeLists.txt  printing_report.cpp
printing_report/print_data/: layout_printing.xml
